2006-01-27  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Typo.
	* src/GrampsDb/_GrampsBSDDB.py: Correct duplicate event IDs on upgrade.
	* src/GrampsDb/_WriteXML.py: More XML updates.

2006-01-27  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcomp.py: preselect gramps ids for events

2006-01-26  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: optimization
	* src/DisplayTabs.py: improved docs
	* src/ViewManger.py: remove import_tool_callback
	* src/GrampsDb/_ReadGedcom.py: fix repeated translation call

2006-01-25  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Add proper upgrade path from
	within load.
	* src/GenericFilters.py (get_filters): Use default value of
	'generic' for the namespace argument; Remove unneeded import.
	* src/GrampsDb/_ConstXML.py: Add new file.
	* src/GrampsDb/Makefile.am: Ship new file.
	* src/GrampsDb/_GrampsBSDDB.py: Convert family and parent family
	relations from integer to tuple on upgrade.
	* src/GrampsDb/_WriteGedcom.py: Convert from tuple to string.
	* src/GrampsDb/_WriteXML.py: Handle some of new XML.
	
	* src/GrampsDb/_ConstXML.py: More XML export fixes.
	* src/GrampsDb/_GrampsBSDDB.py: More XML export fixes.
	* src/GrampsDb/_GrampsDbBase.py: More XML export fixes.
	* src/GrampsDb/_GrampsInMemDB.py: More XML export fixes.
	* src/GrampsDb/_WriteXML.py: More XML export fixes.

2006-01-25  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: use idle_loop to load data for source
	backreferences
	* src/EditSource.py: close the BackReferences tab to turn off the
	idle loop if still active
	* src/GrampsDb/_GrampsBSDDB.py: close secondary indexes before primary
	
2006-01-24  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: SourceRef tab
	* src/EditSource.py: New source ref dialog
	* src/grampsl.glade: New source ref dialog
	* src/GrampsDb/_GedTokens.py: repository tokens
	* src/GrampsDb/_ReadGedcom.py: repository support
